# advent-of-code

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  aoc-create.sh  aoc-delete.sh  generate.py  main.py  pyproject.toml  run.py
2021/day01/: day1.py
2021/day02/: day2.py
2021/day04/: day4.py
2021/day05/: day5.py
2021/day06/: Day6_Challenge.md
2021/day10/: day10.py
2021/day11/: day11.py
2021/day12/: day12.py
2021/day13/: Day13_Challenge.md  day13.py  final_coords.txt
2021/day14/: day14.py
2021/day15/: day15.py
2021/day16/: Day16_Challenge.md  day16.py
2021/day17/: day17.py
2021/day18/: day18.py
2021/day19/: day19.py
2021/day20/: day20.py
2021/day21/: day21.py
2021/day22/: day22.py
2021/day23/: day23.py
2021/day3/: day3.py
2021/day4/: day4.py
2021/day6/: day6.py
2021/day7/: day7.py
2021/day8/: day8.py
2021/day9/: day9.py
2022/day01/: README.md  part1.py  part2.py
2022/day02/: README.md  part1.py  part2.py
2022/day03/: part1.py  part2.py  puzzle.md
2022/day04/: part1.py  part2.py  puzzle.md
2022/day05/: part1.py  part2.py  puzzle.md
2022/day06/: README.md  part1.py  part2.py
2022/day07/: README.md  part1.py  part2.py
2022/day08/: README.md  part1.py  part2.py
2022/day09/: README.md  part1.py  part2.py
2022/day10/: README.md  part1.py  part2.py
2022/day11/: README.md  part1.py  part2.py
2022/day12/: README.md  part1.py  part2.py
2022/day13/: README.md  part1.py  part2.py
2022/day14/: README.md  part1.py  part2.py
2022/day15/: README.md  part1.py  part2.py
2022/day16/: part1.ipynb
2023/day01/: part1.py  part2.py  puzzle.md
2023/day02/: part1.py  part2.py
2023/day03/: part1.py  part2.py
2023/day04/: part1.py  part2.py
scripts/: extract_examples.py  generate.py
src/: type_defs.py  types.py  utils.py
src/2021/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py
src/2022/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py
src/2023/: d01.py  d02.py  d03.py  d04.py
src/2024/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py
src/2025/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py
templates/: day.py  examples.json
tests/: test.py
tests/2021/: d01.json  d02.json  d03.json  d04.json  d05.json  d06.json  d07.json  d08.json  d09.json  d10.json  d11.json  d12.json  d13.json  d14.json  d15.json  d16.json  d17.json  d18.json  d19.json  d20.json  d21.json  d22.json
tests/2022/: d01.json  d02.json  d03.json  d04.json  d05.json  d06.json  d07.json  d08.json  d09.json  d10.json  d11.json  d12.json  d13.json  d14.json  d15.json
tests/2023/: d01.json  d02.json  d03.json  d04.json
tests/2024/: d01.json  d02.json  d03.json  d04.json  d05.json  d06.json  d07.json  d08.json  d09.json  d10.json  d11.json
tests/2025/: d01.json  d02.json  d03.json  d04.json  d05.json  d06.json  d07.json  d08.json
