[project]
name = "advent-of-code"
version = "1.0.0"
description = "My Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data>=2.0.4",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # MY RULES
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D105",     # undocumented-magic-method
    "D107",     # undocumented-public-init
    "FBT001",   # boolean-type-hint-positional-argument
    "FBT002",   # boolean-default-value-positional-argument
    "INP001",   # implicit-namespace-package
    "PLR2004",  # magic-value-comparison
    "T201",     # print

    # CONFLICTING LINTING & FORMAT RULES
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "E501",     # line-too-long
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pyright]
reportAssignmentType = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"