[project]
name = "advent-of-code"
version = "1.0.0"
description = "My Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # MY RULES
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D105",     # undocumented-magic-method
    "D107",     # undocumented-public-init
    "FBT001",   # boolean-type-hint-positional-argument
    "FBT002",   # boolean-default-value-positional-argument
    "FIX002",   # line-contains-todo
    "INP001",   # implicit-namespace-package
    "PLR2004",  # magic-value-comparison
    "PLW2901",  # redefined-loop-name
    "T201",     # print
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
]

[tool.ruff.lint.per-file-ignores]
"main.py" = [
    "E402", # module-import-not-at-top-of-file
]
"scripts/*" = [
    "SLF001", # private-member-access
    "BLE001", # blind-except
    "E402",   # module-import-not-at-top-of-file
]
"src/2021/*" = ["ALL"]
"src/2022/*" = ["ALL"]
"src/2023/*" = ["ALL"]
"src/2024/*" = ["ALL"]
"templates/*" = [
    "ARG001", # unused-function-argument
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
reportAssignmentType = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"
